force-app/src/objects/TR1__Candidate_Summary__c.object
<CustomObject>
    <description>Stores candidate statistics data like application, call list, job board application ids</description>
    <fields>
        <fullName>TR1__ApplicationIds__c</fullName>
        <description>Comma-separated list of Application Ids</description>
        <inlineHelpText>Comma-separated list of Application Ids</inlineHelpText>
        <label>Application Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__CallListCount__c</fullName>
        <description>Number of Call lists the contact is added to</description>
        <inlineHelpText>Number of Call lists the contact is added to</inlineHelpText>
        <label>Call List Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__CallListIds__c</fullName>
        <description>Comma-separated list of Call List Ids</description>
        <inlineHelpText>Comma-separated list of Call List Ids</inlineHelpText>
        <label>CallListIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent relation to the Candidate(Contact)</description>
        <inlineHelpText>Parent relation to the Candidate(Contact)</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Statistics</relationshipLabel>
        <relationshipName>Candidate_Statistics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id for data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for data migration</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__JobBoardApplicationIds__c</fullName>
        <description>Comma-separated list of Job Board Application Ids</description>
        <inlineHelpText>Comma-separated list of Job Board Application Ids</inlineHelpText>
        <label>Job Board Application Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__LatestStage__c</fullName>
        <description>The latest updated application stage</description>
        <inlineHelpText>The latest updated application stage</inlineHelpText>
        <label>Latest Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RecentResumeVersion__c</fullName>
        <description>Number of Contact Documents of Resume Type attached to the Contact</description>
        <inlineHelpText>Number of Contact Documents of Resume Type attached to the Contact</inlineHelpText>
        <label>Recent Resume Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Candidate Statistics</label>
    <nameField>
        <displayFormat>CS-{00000}-{000}</displayFormat>
        <label>Candidate Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>